[project]
name = "3d-modeling-scratch"
version = "0.1.0"
description = ""
authors = [{ name = "Shaun Porwal", email = "shaun.porwal@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = ["build123d (>=0.9.0,<0.10.0)"]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
